added several new icons from Dave, changed some myself
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@442 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/filetypes.in
+++ b/bluefish/data/filetypes.in
@@ -1,5 +1,5 @@
 perl:.pl:::
-python:.py:::
+python:.py::PKGDATADIRicon_python.png:
 objectfile:.o\:.class:::
 stylesheet:.css:::
 webimage:.jpg\:.png\:.gif\:.jpeg::PKGDATADIRicon_image.png:
