German translation update
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@447 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/po/Makefile.in
+++ b/bluefish/po/Makefile.in
@@ -25,8 +25,8 @@ XGETTEXT = @XGETTEXT@
 MSGMERGE = @MSGMERGE@
 
 #en.gmo should not be installed anymore!!
-FINISHED_CATALOGS = da.gmo fr.gmo es.gmo it.gmo hu.gmo pl.gmo no.gmo ru.gmo sv.gmo
-NONFINISHED_CATALOGS = de.gmo ro.gmo cs.gmo el.gmo ja.gmo pt_BR.gmo nl.gmo
+FINISHED_CATALOGS = da.gmo fr.gmo es.gmo it.gmo hu.gmo pl.gmo no.gmo ru.gmo sv.gmo de.gmo
+NONFINISHED_CATALOGS = ro.gmo cs.gmo el.gmo ja.gmo pt_BR.gmo nl.gmo
 CATALOGS = ${FINISHED_CATALOGS} ${NONFINISHED_CATALOGS}
 
 %.gmo : %.po
