--- a/data/filetypes.in
+++ b/data/filetypes.in
@@ -13,3 +13,4 @@ javascript:.js:\n'" ::
 html:.html\:.htm\:.shtml\:.shtm:<> \n":PKGDATADIRicon_html.png:
 php:.php\:.php4\:.inc\:.php3: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_php.png:
 cfml:.cfm: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_cfml.png:
+pascal:.pas: (){}'[]\n;":PKGDATADIRicon_pascal.png:
