added pascal language support from Richard Kimber <rkimber@ntlworld.com>
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@450 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/filetypes.in
+++ b/bluefish/data/filetypes.in
@@ -13,3 +13,4 @@ javascript:.js:\n'" ::
 html:.html\:.htm\:.shtml\:.shtm:<> \n":PKGDATADIRicon_html.png:
 php:.php\:.php4\:.inc\:.php3: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_php.png:
 cfml:.cfm: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_cfml.png:
+pascal:.pas: (){}'[]\n;":PKGDATADIRicon_pascal.png:
