made two more icons get installed
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@453 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/icons/Makefile.in
+++ b/bluefish/icons/Makefile.in
@@ -38,7 +38,9 @@ OBJS = 	icon_c.png \
 			icon_unknown.png \
 			icon_dir.png \
 			icon_image.png \
+			icon_pascal.png \
 			icon_php.png \
+			icon_python.png \
 			icon_xml.png
 
 INSTALL = @INSTALL@
