--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -38,7 +38,9 @@ OBJS = 	icon_c.png \
 			icon_unknown.png \
 			icon_dir.png \
 			icon_image.png \
+			icon_pascal.png \
 			icon_php.png \
+			icon_python.png \
 			icon_xml.png
 
 INSTALL = @INSTALL@
