--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -24,8 +24,8 @@ INSTALL = @INSTALL@
 INSTALL_DIR = $(INSTALL) -d -m 755 
 INSTALL_DATA = ${INSTALL} -m 644
 
-DEFAULTFILES = highlighting.default filetypes.default encodings.default
-FUNCREFFILES = funcref_html.xml
+DEFAULTFILES = highlighting.default filetypes.default encodings.default custom_menu.default
+FUNCREFFILES = funcref_html.xml funcref_php.xml
 
 %.default : %.in
 	sed -e 's!PKGDATADIR!$(pkgdatadir)!' < $< > $@
