--- a/data/filetypes.in
+++ b/data/filetypes.in
@@ -14,3 +14,5 @@ html:.html\:.htm\:.shtml\:.shtm:<> \n":PKGDATADIRicon_html.png:
 php:.php\:.php4\:.inc\:.php3: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_php.png:
 cfml:.cfm: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_cfml.png:
 pascal:.pas: (){}'[]\n;":PKGDATADIRicon_pascal.png:
+R:.r\:.rd\:.R\:.Rd\:.RD: <>=+-*/'"{}[]()\t\n.,\:$&|#:PKGDATADIRicon_r.png:
+text:.txt:::
