changed the way defaultfiles are parsed, they are now read every time the file is changed, bluefish stores the lasttime the file is parsed
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@455 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -24,8 +24,8 @@ INSTALL = @INSTALL@
 INSTALL_DIR = $(INSTALL) -d -m 755 
 INSTALL_DATA = ${INSTALL} -m 644
 
-DEFAULTFILES = highlighting.default filetypes.default encodings.default
-FUNCREFFILES = funcref_html.xml
+DEFAULTFILES = highlighting.default filetypes.default encodings.default custom_menu.default
+FUNCREFFILES = funcref_html.xml funcref_php.xml
 
 %.default : %.in
 	sed -e 's!PKGDATADIR!$(pkgdatadir)!' < $< > $@
