--- a/bluefish/icons/Makefile.in
+++ b/bluefish/icons/Makefile.in
@@ -41,6 +41,7 @@ OBJS = 	icon_c.png \
 			icon_pascal.png \
 			icon_php.png \
 			icon_python.png \
+			icon_r.png \
 			icon_xml.png
 
 INSTALL = @INSTALL@
