fixed Makefiles for BSD make
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@486 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -26,8 +26,9 @@ INSTALL_DATA = ${INSTALL} -m 644
 
 DEFAULTFILES = highlighting.default filetypes.default encodings.default custom_menu.default
 FUNCREFFILES = funcref_html.xml funcref_php.xml
+.SUFFIXES: .in .default
 
-%.default : %.in
+.in.default:
 	sed -e 's!PKGDATADIR!$(pkgdatadir)!' < $< > $@
 
 all: $(DEFAULTFILES)
