OpenBSD 3.3 needs -lintl for gettext()
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@502 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -274,7 +274,13 @@ if test "$MSGFMT" = "no" ; then
 	echo "no msfmt - NLS disabled"
 	USE_NLS=no
 fi
+
+dnl OpenBSD has gettext in -lintl
+
 if test "$USE_NLS" = "yes" ; then
+	AC_CHECK_LIB(intl, gettext,
+		LIBS="$LIBS -lintl"
+	)
 	AC_DEFINE(ENABLE_NLS)
 fi
 
