--- a/Makefile.in
+++ b/Makefile.in
@@ -22,6 +22,7 @@ VPATH = @srcdir@
 
 PACKAGE = @PACKAGE@
 VERSION = @VERSION@
+USE_NLS = @USE_NLS@
 
 srcdir = src
 
@@ -44,7 +45,9 @@ INSTALL_DATA = $(INSTALL) -m 644
 bluefish:all
 all:
 	@cd src/ && $(MAKE) all
-	@cd po/ && $(MAKE) all
+	if [ ${USE_NLS} == "yes" ]; then \
+		@cd po/ && $(MAKE) all; \
+	fi
 	@cd data/ && $(MAKE) all
 
 clean:
@@ -74,7 +77,9 @@ install: src/bluefish
 		$(INSTALL_DATA) inline_images/bluefish_icon1.png $(iconpath)/bluefish-icon.png ;\
 	fi
 	@cd src/ && $(MAKE) install
-	@cd po/ && $(MAKE) install
+	if [ ${USE_NLS} == "yes" ]; then \
+		@cd po/ && $(MAKE) install;\
+	fi
 	@cd data/ && $(MAKE) install
 
 uninstall:
