--- a/Makefile.in
+++ b/Makefile.in
@@ -46,7 +46,7 @@ bluefish:all
 all:
 	@cd src/ && $(MAKE) all
 	if [ ${USE_NLS} == "yes" ]; then \
-		@cd po/ && $(MAKE) all; \
+		cd po/ && $(MAKE) all; \
 	fi
 	@cd data/ && $(MAKE) all
 
@@ -78,7 +78,7 @@ install: src/bluefish
 	fi
 	@cd src/ && $(MAKE) install
 	if [ ${USE_NLS} == "yes" ]; then \
-		@cd po/ && $(MAKE) install;\
+		cd po/ && $(MAKE) install;\
 	fi
 	@cd data/ && $(MAKE) install
 
