--- a/data/filetypes.in
+++ b/data/filetypes.in
@@ -1,18 +1,18 @@
-perl:.pl:.PL:.cgi:::
+text:.txt:::
+php:.php\:.php4\:.inc\:.php3: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_php.png:
+html:.html\:.htm\:.shtml\:.shtm:<> \n":PKGDATADIRicon_html.png:
 python:.py::PKGDATADIRicon_python.png:
+c:.c\:.h:(){}'[]\n" :PKGDATADIRicon_c.png:
+java:.java\:.jar\:.class:(){}'[]\n" :PKGDATADIRicon_java.png:
+perl:.pl\:.PL\:.cgi:::
 objectfile:.o\:.class:::
 stylesheet:.css:::
 webimage:.jpg\:.png\:.gif\:.jpeg::PKGDATADIRicon_image.png:
 image:.jpg\:.png\:.gif\:.jpeg\:.tif\:.tiff\:.xpm\:.xcf::PKGDATADIRicon_image.png:
-c:.c\:.h:(){}'[]\n" :PKGDATADIRicon_c.png:
 sql:.sql:(){}'[]\n" ::
 jsp:.jsp:(){}'[]\n" :PKGDATADIRicon_java.png:
-java:.java\:.jar\:.class:(){}'[]\n" :PKGDATADIRicon_java.png:
 xml:.xml:<> \n":PKGDATADIRicon_xml.png:
 javascript:.js:\n'" ::
-html:.html\:.htm\:.shtml\:.shtm:<> \n":PKGDATADIRicon_html.png:
-php:.php\:.php4\:.inc\:.php3: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_php.png:
 cfml:.cfm: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_cfml.png:
 pascal:.pas: (){}'[]\n;":PKGDATADIRicon_pascal.png:
 R:.r\:.rd\:.R\:.Rd\:.RD: <>=+-*/'"{}[]()\t\n.,\:$&|#:PKGDATADIRicon_r.png:
-text:.txt:::
