Added 'gettext po' highligting patterns
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@522 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/filetypes.in
+++ b/bluefish/data/filetypes.in
@@ -16,3 +16,4 @@ javascript:.js:\n'" ::
 cfml:.cfm: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_cfml.png:
 pascal:.pas: (){}'[]\n;":PKGDATADIRicon_pascal.png:
 R:.r\:.rd\:.R\:.Rd\:.RD: <>=+-*/'"{}[]()\t\n.,\:$&|#:PKGDATADIRicon_r.png:
+gettext po:.po:"\n::
