--- a/data/filetypes.in
+++ b/data/filetypes.in
@@ -16,3 +16,4 @@ javascript:.js:\n'" ::
 cfml:.cfm: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_cfml.png:
 pascal:.pas: (){}'[]\n;":PKGDATADIRicon_pascal.png:
 R:.r\:.rd\:.R\:.Rd\:.RD: <>=+-*/'"{}[]()\t\n.,\:$&|#:PKGDATADIRicon_r.png:
+gettext po:.po:"\n::
