moved fref.c to its alphabetical order in the Makefile
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@539 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -48,6 +48,7 @@ SRCS = 	bf_lib.c \
 			char_table.c \
 			document.c \
 			filebrowser.c \
+			fref.c \
 			gtk_easy.c \
 			gui.c \
 			highlight.c \
@@ -67,8 +68,7 @@ SRCS = 	bf_lib.c \
 			snr2.c \
 			stringlist.c \
 			undo_redo.c \
-			wizards.c \
-			fref.c
+			wizards.c
 
 OBJS = $(SRCS:.c=.o)
 
