2 slight changes to build under Windows
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@563 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -53,7 +53,7 @@ esac
  
 if test "$CYGWIN" = "yes"; then
 	AC_DEFINE(WIN32)
-	CFLAGS="$CFLAGS -fnative-struct"
+	CFLAGS="$CFLAGS"
 	LIBS="$LIBS -lintl.dll"
 fi  
 
