--- a/bluefish/Makefile.in
+++ b/bluefish/Makefile.in
@@ -45,7 +45,7 @@ INSTALL_DATA = $(INSTALL) -m 644
 bluefish:all
 all:
 	@cd src/ && $(MAKE) all
-	if [ ${USE_NLS} == "yes" ]; then \
+	if [ "${USE_NLS}" == "yes" ]; then \
 		cd po/ && $(MAKE) all; \
 	fi
 	@cd data/ && $(MAKE) all
@@ -77,7 +77,7 @@ install: src/bluefish
 		$(INSTALL_DATA) inline_images/bluefish_icon1.png $(iconpath)/bluefish-icon.png ;\
 	fi
 	@cd src/ && $(MAKE) install
-	if [ ${USE_NLS} == "yes" ]; then \
+	if [ "${USE_NLS}" == "yes" ]; then \
 		cd po/ && $(MAKE) install;\
 	fi
 	@cd data/ && $(MAKE) install
