added ja.po to Makefile.in and also updated it to the latest version
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@643 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/po/Makefile.in
+++ b/bluefish/po/Makefile.in
@@ -24,7 +24,7 @@ MSGFMT = @MSGFMT@
 XGETTEXT = @XGETTEXT@
 MSGMERGE = @MSGMERGE@
 
-SRCS = da.po fr.po es.po it.po hu.po pl.po no.po ru.po sv.po de.po
+SRCS = da.po fr.po es.po it.po ja.po hu.po pl.po no.po ru.po sv.po de.po
 .SUFFIXES: .po .gmo
 OBJS = $(SRCS:.po=.gmo)
 
