--- a/src/config.h.in
+++ b/src/config.h.in
@@ -52,7 +52,7 @@
 #undef HAVE_LIBASPELL
 
 /* gnome-vfs-2.0 */
-#undef HAVE_GNOME_VFS
+/* #undef HAVE_GNOME_VFS */
 
 /* Define if you have the ANSI C header files.  */
 #undef STDC_HEADERS
