some more gnomeVFS support if it is available
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@710 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/config.h.in
+++ b/bluefish/src/config.h.in
@@ -52,7 +52,7 @@
 #undef HAVE_LIBASPELL
 
 /* gnome-vfs-2.0 */
-#undef HAVE_GNOME_VFS
+/* #undef HAVE_GNOME_VFS */
 
 /* Define if you have the ANSI C header files.  */
 #undef STDC_HEADERS
