changed the code so the new images will be actually used, and addded fref.png to CVS (that was missing for some time already)
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@804 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/inline_images/Makefile
+++ b/bluefish/inline_images/Makefile
@@ -58,6 +58,7 @@ TOOLBAR = \
 	frameset frameset.png \
 	frameset2 frameset2.png \
 	framewhiz framewhiz.png \
+	fref fref.png \
 	frdialog frdialog.png \
 	frinfo frinfo.png \
 	headings headings.png \
