added dependency on bluefish.h to all objects
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@811 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -81,6 +81,8 @@ bluefish: $(SRCS) $(OBJS)
 .c.o: $(SRCS)
 	$(CC) $(DEFS) $(CFLAGS) -c -o $@ $<
 
+$(OBJS): bluefish.h
+
 clean:
 	rm -f $(OBJS) bluefish
 
