Added bookmark system. Configure --with-bookmarks
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@927 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -44,6 +44,7 @@ DEFS = -DLOCALEDIR=\"$(localedir)\" -DGNULOCALEDIR=\"$(gnulocaledir)\" \
 SRCS = 	bf_lib.c \
 			bfspell.c \
 			bluefish.c \
+			bookmark.c \
 			cap.c \
 			char_table.c \
 			document.c \
