Uncomment new.png. This icon is used in the create new project dialog
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@948 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/inline_images/Makefile
+++ b/bluefish/inline_images/Makefile
@@ -84,6 +84,7 @@ TOOLBAR = \
 	multithumbs multithumbs.png \
 	nbsp nbsp.png \
 	netscape netscape.png \
+	new new.png \
 	no no.png \
 	nothing nothing.png \
 	ok ok.png \
@@ -124,7 +125,6 @@ TOOLBAR = \
 #	cssclass cssclass.png \
 #	cut cut.png \
 #	list_menu list_menu.png \
-#	new new.png \
 #	open open.png \
 #	paste paste.png \
 #	preferences preferences.png \
