replaced some icons with a stock icon, and removed them from the source, and rewrote the backend functions for buttons
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@976 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/inline_images/Makefile
+++ b/bluefish/inline_images/Makefile
@@ -102,8 +102,6 @@ TOOLBAR = \
 	quick_start quick_start.png \
 	right right.png \
 	samp samp.png \
-	search search.png \
-	search_replace search_replace.png \
 	table table.png \
 	table2 table2.png \
 	table_capt table_capt.png \
@@ -144,6 +142,8 @@ TOOLBAR = \
 #	ssi ssi.png \
 #	save save.png \
 #	save_as save_as.png \
+#	search search.png \
+#	search_replace search_replace.png \
 #	spellcheck spellcheck.png \
 #	strikeout strikeout.png \
 #	undo undo.png \
