fr was twice in these files
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@977 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -29,7 +29,7 @@ AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
 AC_DEFINE_UNQUOTED(CURRENT_VERSION_NAME, "$PACKAGE $VERSION HTML editor")
 
-ALL_LINGUAS="cs da de fr el es fr hu it ja nl no pl pt_BR ro ru sv"
+ALL_LINGUAS="cs da de el es fr hu it ja nl no pl pt_BR ro ru sv"
 
 dnl ************************
 dnl Compiler options
