patch from James Ogley <james.ogley@pinnacle.co.uk>
I've attached a patch against 0.12 that adds support to installing in an
RPM Build Root (by the standard method of specifying $DESTDIR as the
root).


git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@992 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/Makefile.in
+++ b/Makefile.in
@@ -72,8 +72,8 @@ distclean:
 
 install: src/bluefish
 	pkgdatadir=@pkgdatadir@
-	$(INSTALL_DIR) $(pkgdatadir)
-	$(INSTALL_DATA) images/bluefish_splash.png $(pkgdatadir)
+	$(INSTALL_DIR) $(DESTDIR)$(pkgdatadir)
+	$(INSTALL_DATA) images/bluefish_splash.png $(DESTDIR)$(pkgdatadir)
 	@cd icons/ && $(MAKE) install
 	if [ -d $(iconpath) ]; then \
 		$(INSTALL_DATA) inline_images/bluefish_icon1.png $(iconpath)/bluefish-icon.png ;\
@@ -89,4 +89,4 @@ uninstall:
 	@cd src/ && $(MAKE) uninstall
 	@cd po/ && $(MAKE) uninstall
 	@cd data/ && $(MAKE) uninstall
-	/bin/rmdir $(pkgdatadir)
+	/bin/rmdir $(DESTDIR)$(pkgdatadir)
