--- a/bluefish/po/Makefile.in
+++ b/bluefish/po/Makefile.in
@@ -40,15 +40,15 @@ all-no:
 install:
 	@for file in $(SRCS) ; do \
 		lang=`echo $${file} | sed -e 's/\.po$$//'`;\
-		$(INSTALL_DIR) $(localedir)/$${lang}/ ;\
-		$(INSTALL_DIR) $(localedir)/$${lang}/LC_MESSAGES/ ;\
-		$(INSTALL_DATA) $${lang}.gmo $(localedir)/$${lang}/LC_MESSAGES/${PACKAGE}.mo;\
+		$(INSTALL_DIR) $(DESTDIR)$(localedir)/$${lang}/ ;\
+		$(INSTALL_DIR) $(DESTDIR)$(localedir)/$${lang}/LC_MESSAGES/ ;\
+		$(INSTALL_DATA) $${lang}.gmo $(DESTDIR)$(localedir)/$${lang}/LC_MESSAGES/${PACKAGE}.mo;\
 	done
 
 uninstall:
 	@for file in $(SRCS) ; do \
 		lang=`echo $${file} | sed -e 's/\.po$$//'`;\
-		rm -f $(localedir)/$${lang}/LC_MESSAGES/${PACKAGE}.mo;\
+		rm -f $(DESTDIR)$(localedir)/$${lang}/LC_MESSAGES/${PACKAGE}.mo;\
 	done
 
 clean:
